--- a/docs/zudoku/pages/overview.en.mdx
+++ b/docs/zudoku/pages/overview.en.mdx
@@ -87,12 +87,12 @@
 # API Access Matrix for Restful-Booker-Platform
 
 <div className="service-buttons">
-  <a href="/api/auth" className="service-button auth">🔐 Auth</a>
-  <a href="/api/booking" className="service-button booking">📅 Booking</a>
-  <a href="/api/room" className="service-button room">🏠 Room</a>
-  <a href="/api/message" className="service-button message">💬 Message</a>
-  <a href="/api/branding" className="service-button branding">🎨 Branding</a>
-  <a href="/api/report" className="service-button report">📊 Report</a>
+  <a href="/pytest-booker-platform-api/zudoku-doc/api/auth" className="service-button auth">🔐 Auth</a>
+  <a href="/pytest-booker-platform-api/zudoku-doc/api/booking" className="service-button booking">📅 Booking</a>
+  <a href="/pytest-booker-platform-api/zudoku-doc/api/room" className="service-button room">🏠 Room</a>
+  <a href="/pytest-booker-platform-api/zudoku-doc/api/message" className="service-button message">💬 Message</a>
+  <a href="/pytest-booker-platform-api/zudoku-doc/api/branding" className="service-button branding">🎨 Branding</a>
+  <a href="/pytest-booker-platform-api/zudoku-doc/api/report" className="service-button report">📊 Report</a>
 </div>
 
 <style>{`
