add button home

--- a/docs/zudoku/pages/overview.mdx
+++ b/docs/zudoku/pages/overview.mdx
@@ -42,20 +42,20 @@
     href="/pytest-booker-platform-api/" 
     target="_blank" 
     title="Go to Test Reports Dashboard"
-    style="
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      border: 1px solid var(--zuplo-border-color);
-      background: var(--zuplo-background-secondary);
-      border-radius: 6px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      text-decoration: none;
-      margin-right: 8px;
-    "
+    style={{
+      display: "flex",
+      alignItems: "center",
+      justifyContent: "center",
+      width: "40px",
+      height: "40px",
+      border: "1px solid var(--zuplo-border-color)",
+      background: "var(--zuplo-background-secondary)",
+      borderRadius: "6px",
+      cursor: "pointer",
+      transition: "all 0.2s ease",
+      textDecoration: "none",
+      marginRight: "8px"
+    }}
   >
     🏠
   </a>
