--- a/docs/zudoku/pages/overview.mdx
+++ b/docs/zudoku/pages/overview.mdx
@@ -17,6 +17,10 @@
     window.location.href = newPath;
   }
 
+  function goToHome() {
+    window.location.href = "/pytest-booker-platform-api/";
+  }
+
   document.addEventListener("DOMContentLoaded", () => {
     const savedLang = localStorage.getItem("preferred-language") || "ru";
     const currentPath = window.location.pathname;
@@ -36,33 +40,22 @@
   });
 `}} />
 
-
 <div className="language-switcher">
-  <a 
-    href="/pytest-booker-platform-api/" 
-    target="_blank" 
+  
+  <button 
+    onClick={() => goToHome()} 
+    data-lang="home"
     title="Go to Test Reports Dashboard"
-    style={{
-      display: "flex",
-      alignItems: "center",
-      justifyContent: "center",
-      width: "45px",
-      height: "45px",
-      border: "1px solid var(--zuplo-border-color)",
-      background: "var(--zuplo-background-secondary)",
-      borderRadius: "6px",
-      cursor: "pointer",
-      transition: "all 0.2s ease",
-      textDecoration: "none",
-      marginRight: "8px"
-    }}
+    className="btn-home"
   >
     🏠
-  </a>
-  <button onClick={() => switchLanguage("ru")}>
+  </button>
+
+  
+  <button onClick={() => switchLanguage("ru")} data-lang="ru">
     🇷🇺
   </button>
-  <button onClick={() => switchLanguage("en")}>
+  <button onClick={() => switchLanguage("en")} data-lang="en">
     🇬🇧
   </button>
 </div>
@@ -101,6 +94,7 @@
     border-color: var(--zuplo-color-primary);
     font-weight: 600;
   }
+
 `}</style>
 
 # Матрица доступа к API Restful-Booker-Platform
